# arcanoid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/org/home/arci_arcanoid/: ArcanoidGame.java
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/app/src/main/res/values/: styles.xml
android-project/gradle/wrapper/: gradle-wrapper.properties
cmake/modules/: AddModule.cmake
engine/: CMakeLists.txt
engine/glad/: CMakeLists.txt
engine/glad/include/glad/: glad.h
engine/glad/src/: glad.c
engine/imgui_impl/: imgui_impl_opengl.cxx  imgui_impl_opengl.hxx  roboto.hxx
engine/include/: engine.hxx  helper.hxx  opengl-debug.hxx  opengl-shader-programm.hxx
engine/shaders/: CMakeLists.txt
engine/src/: engine.cxx  opengl-shader-programm.cxx
engine/src/common/: FrameTimer.cxx  FrameTimer.hxx  Timer.cxx  Timer.hxx
res/: CMakeLists.txt
src/: component.cxx  component.hxx  coordinator.cxx  coordinator.hxx  entity.cxx  entity.hxx  game-system.cxx  game-system.hxx  game.cxx  game.hxx  main.cxx
